--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/acc_opening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/acc_opening.xhtml
@@ -1370,7 +1370,7 @@
 												</div>
 												<div class="acc_holder_dtl_block relation_dtl">
 													<div class="Container70">
-														<div class="Container100"><span>4.Are you currently unable to pay your debts as they fall due, or have entered into or have proposed to enter into any scheme, arrangement or composition with your creditors, or has any bankruptcy proceeding or resolution been filed against you or passed to effect the same, or has an administrator, trustee or other analogous officer been appointed over all or a material part of your assets?  </span></div>
+														<div class="Container100"><span>4.Are you currently unable to pay your debts as they fall due or under any bankruptcy proceeding?  </span></div>
 														<div class="Container100">
 															<input id="des_plz1" name="desplz" type="text" placeholder="Please Specify"/>
 															<label for="desplz">Please Specify</label>
@@ -1454,7 +1454,7 @@
 												</div>
 												<div class="acc_holder_dtl_block relation_dtl">
 													<div class="Container70">
-														<div class="Container100"><span>4.Are you currently unable to pay your debts as they fall due, or have entered into or have proposed to enter into any scheme, arrangement or composition with your creditors, or has any bankruptcy proceeding or resolution been filed against you or passed to effect the same, or has an administrator, trustee or other analogous officer been appointed over all or a material part of your assets?  </span></div>
+														<div class="Container100"><span>4.Are you currently unable to pay your debts as they fall due or under any bankruptcy proceeding?  </span></div>
 														<div class="Container100">
 															<input id="jointdes_plz1" name="desplz" type="text" placeholder="Please Specify"/>
 															<label for="desplz">Please Specify</label>
