--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
@@ -254,9 +254,10 @@
                                                                 </div>
                                                                 <p:panel id="nwPriHldTaxRsn" style="border-color: transparent;">
                                                                     <ui:fragment rendered="#{uobCustodyBean.dsplPriHldrTaxRsn}">
-                                                                        <div class="Container100 Responsive100 label_opacity radio_select">
+                                                                        <div class="Container100 Responsive100 ">
                                                                             <p:inputText id="priHldrTaxPnlReasExpl" placeholder="Explain"
                                                                                          value="#{uobCustodyBean.owTaxDtls.tinUnavailableValue}"/>
+                                                                            <label for="priHldrTaxPnlReasExpl">Explain</label>
                                                                         </div>
                                                                     </ui:fragment>
                                                                 </p:panel>
