--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
@@ -11,13 +11,73 @@
 	</f:metadata>
     <ui:define name="content">
 
+		<h:outputScript name="js/invCharts.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/uobHighCharts.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+
+		<!-- HighChart .js plugin Start -->
+		<h:outputScript name="js/highcharts.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/highcharts-3d.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/highcharts-more.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/exporting.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/drilldown.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+		<h:outputScript name="js/data.js"
+						library="#{uiLayout.webProfile.cssdir}"/>
+
     <div class="layout-portlets-box open_client_layout portfolio_layout" >
 		<div class="Container100 Responsive100">
 			<div class="portfolio_selection">
 				<div class="Container30"><p:graphicImage name="images/portfolio/goal.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/><span>Goal</span></div>
 				<div class="Container30"><p:graphicImage name="images/portfolio/riskMeter.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/></div>
-				<div class="Container30"><span class="sapn_review">Review</span><p:graphicImage name="images/portfolio/review.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/></div>
-				
+				<div class="Container30">
+					<span class="sapn_review">Review</span>
+					<!--<p:graphicImage name="images/portfolio/review.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/>-->
+					<div class="review-donut" style="float: right;  width: 100px;  height: 80px;">
+
+						<h:form id="ceForm">
+							<ui:fragment rendered="#{!uobdash.dispNoRcrd}">
+
+								<p:panel id="cnfgraphArea" style="border: 0px; background: white;">
+									<script>
+										$(document).ready(function ()
+														  {
+															  if (document.getElementById('ceForm:cnftypeOfCharts') != null)
+															  {
+																  if (document.getElementById('ceForm:cnftypeOfCharts').value == 'HIGHCHART.2DDONUT')
+																  {
+																	  draw2dDonut1lyrChartDyna('CNFPrflo');
+																  }
+															  }
+
+														  });
+
+
+
+
+									</script>
+
+									<div class="Container100 donutChartGraph review_graph">
+										<div id="2dDonutChartCnf"></div>
+										<h:inputHidden value='[{"name":"Fixed Income","y":41.455600000000004,"drilldown":"Fixed Income","color":"#47566D","amount":45601},{"name":"Alternative","y":4.993745454545454,"drilldown":"Alternative","color":"#5E5E5E","amount":5493},{"name":"Cash","y":0.2397818181818182,"drilldown":"Cash","color":"#8E8E8E","amount":263},{"name":"Equity","y":53.31087272727273,"drilldown":"Equity","color":"#333F50","amount":58641}]'
+													   id="twodDonutValueChartCnf"/>
+										<h:inputHidden value="HIGHCHART.2DDONUT" id="cnftypeOfCharts"/>
+
+									</div>
+
+
+								</p:panel>
+
+							</ui:fragment>
+						</h:form>
+
+					</div>
+				</div>
 			</div>
 			<div class="portfolio_progress_bar">
 				<p:progressBar value="50" labelTemplate="{value}%" displayOnly="true"/>
