--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
@@ -111,6 +111,9 @@
 					</div>
 				<div class="Container100 tab_dtl">
 					<p>
+						What is your Goal? <p:inputText placeholder="Goal"></p:inputText>
+					</p>
+					<p>
 						How long do you plan to invest? <p:inputText style="width:55px;"  placeholder="Years"></p:inputText> years
 					</p>
 					<p>
