--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/retirement.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/retirement.xhtml
@@ -50,6 +50,31 @@
 						
 					</div>
 				<div class="Container100 tab_dtl">
+					<div class="Container100 retirement_opt">
+						<div class="Container50">
+							<div class="Container80 label_opacity">
+								<label>I want to save for retirement</label>
+							</div>
+							<div class="Container10 textAlign">
+								<p:selectOneRadio id="radio" value="" >
+									<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
+
+								</p:selectOneRadio>
+							</div>
+						</div>
+						<div class="Container50">
+							<div class="Container80 label_opacity">
+								<label>I am retired</label>
+							</div>
+							<div class="Container10 textAlign">
+								<p:selectOneRadio id="radio1" value="" >
+									<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
+
+								</p:selectOneRadio>
+							</div>
+
+						</div>
+					</div>
 					<p>
 						I intend to retire and start utilising my funds in <p:inputText style="width:55px;" placeholder="Years"></p:inputText> years
 					</p>
